--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -24,12 +24,12 @@ include::{include_path}/plugin_header.asciidoc[]
 The aim of this filter is to aggregate information available among several events (typically log lines) belonging to a same task,
 and finally push aggregated information into final task event.
 
-You should be very careful to set Logstash filter workers to 1 (`-w 1` flag) for this filter to work correctly 
+You should be very careful to set Logstash filter workers to 1 (`-w 1` flag) for this filter to work correctly
 otherwise events may be processed out of sequence and unexpected results will occur.
 
 ==== Example #1
 
-* with these given logs :  
+* with these given logs :
 [source,ruby]
 ----------------------------------
  INFO - 12345 - TASK_START - start
@@ -45,7 +45,7 @@ otherwise events may be processed out of sequence and unexpected results will oc
    grok {
      match => [ "message", "%{LOGLEVEL:loglevel} - %{NOTSPACE:taskid} - %{NOTSPACE:logger} - %{WORD:label}( - %{INT:duration:int})?" ]
    }
- 
+
    if [logger] == "TASK_START" {
      aggregate {
        task_id => "%{taskid}"
@@ -61,7 +61,7 @@ otherwise events may be processed out of sequence and unexpected results will oc
        map_action => "update"
      }
    }
- 
+
    if [logger] == "TASK_END" {
      aggregate {
        task_id => "%{taskid}"
@@ -74,7 +74,7 @@ otherwise events may be processed out of sequence and unexpected results will oc
  }
 ----------------------------------
 
-* the final event then looks like :  
+* the final event then looks like :
 [source,ruby]
 ----------------------------------
 {
@@ -95,21 +95,21 @@ the field `sql_duration` is added and contains the sum of all sql queries durati
  INFO - 12345 - TASK_END - end
 ----------------------------------
 
-* you can also aggregate "sql duration" with a slightly different configuration : 
+* you can also aggregate "sql duration" with a slightly different configuration :
 [source,ruby]
 ----------------------------------
  filter {
    grok {
      match => [ "message", "%{LOGLEVEL:loglevel} - %{NOTSPACE:taskid} - %{NOTSPACE:logger} - %{WORD:label}( - %{INT:duration:int})?" ]
    }
-    
+
    if [logger] == "SQL" {
      aggregate {
        task_id => "%{taskid}"
        code => "map['sql_duration'] ||= 0 ; map['sql_duration'] += event.get('duration')"
      }
    }
-    
+
    if [logger] == "TASK_END" {
      aggregate {
        task_id => "%{taskid}"
@@ -127,15 +127,15 @@ the field `sql_duration` is added and contains the sum of all sql queries durati
 
 ==== Example #3 : no end event
 
-Third use case: You have no specific end event. 
+Third use case: You have no specific end event.
 
 A typical case is aggregating or tracking user behaviour. We can track a user by its ID through the events, however once the user stops interacting, the events stop coming in. There is no specific event indicating the end of the user's interaction.
 
-In this case, we can enable the option 'push_map_as_event_on_timeout' to enable pushing the aggregation map as a new event when a timeout occurs.  
+In this case, we can enable the option 'push_map_as_event_on_timeout' to enable pushing the aggregation map as a new event when a timeout occurs.
 In addition, we can enable 'timeout_code' to execute code on the populated timeout event.
-We can also add 'timeout_task_id_field' so we can correlate the task_id, which in this case would be the user's ID. 
+We can also add 'timeout_task_id_field' so we can correlate the task_id, which in this case would be the user's ID.
 
-* Given these logs: 
+* Given these logs:
 
 [source,ruby]
 ----------------------------------
@@ -181,11 +181,11 @@ filter {
 
 ==== Example #4 : no end event and tasks come one after the other
 
-Fourth use case : like example #3, you have no specific end event, but also, tasks come one after the other.  
-That is to say : tasks are not interlaced. All task1 events come, then all task2 events come, ...  
-In that case, you don't want to wait task timeout to flush aggregation map.  
-* A typical case is aggregating results from jdbc input plugin.  
-* Given that you have this SQL query : `SELECT country_name, town_name FROM town`  
+Fourth use case : like example #3, you have no specific end event, but also, tasks come one after the other.
+That is to say : tasks are not interlaced. All task1 events come, then all task2 events come, ...
+In that case, you don't want to wait task timeout to flush aggregation map.
+* A typical case is aggregating results from jdbc input plugin.
+* Given that you have this SQL query : `SELECT country_name, town_name FROM town`
 * Using jdbc input plugin, you get these 3 events from :
 [source,json]
 ----------------------------------
@@ -220,6 +220,52 @@ In that case, you don't want to wait task timeout to flush aggregation map.
 * When 5s timeout comes, the last aggregate map is pushed as a new event
 * Finally, initial events (which are not aggregated) are dropped because useless (thanks to `event.cancel()`)
 
+==== Example #5 : no end event and push events as soon as possible
+Fifth use case: like example #3, there is no end event. Events keep comming for an indefinite time and you want to push the aggregation map as soon as possible after the last user interaction without waiting for the `timeout`. This allows to have the aggregated events pushed closer to real time.
+A typical case is aggregating or tracking user behaviour. We can track a user by its ID through the events, however once the user stops interacting, the events stop coming in. There is no specific event indicating the end of the user's interaction. The user ineraction will be considered as ended when no events for the specified user (task_id) arrive afer the specified inactivity_timeout`.
+If the user continues interacting for longer than timeout seconds (since first event), the aggregation map will still be deleted and pushed as a new event when timeout occurs.
+The difference with example #3 is that the events will be pushed as soon as the user stops interacting for `inactivity_timeout` seconds instead of waiting for the end of `timeout` seconds since first event.
+In this case, we can enable the option 'push_map_as_event_on_timeout' to enable pushing the aggregation map as a new event when a timeout occurs.
+In addition, we can enable 'timeout_code' to execute code on the populated timeout event.
+We can also add 'timeout_task_id_field' so we can correlate the task_id, which in this case would be the user's ID.
+* Given these logs:
+[source,ruby]
+----------------------------------
+INFO - 12345 - Clicked One
+INFO - 12345 - Clicked Two
+INFO - 12345 - Clicked Three
+----------------------------------
+* You can aggregate the amount of clicks the user did like this:
+[source,ruby]
+----------------------------------
+filter {
+ grok {
+   match => [ "message", "%{LOGLEVEL:loglevel} - %{NOTSPACE:user_id} - %{GREEDYDATA:msg_text}" ]
+ }
+ aggregate {
+   task_id => "%{user_id}"
+   code => "map['clicks'] ||= 0; map['clicks'] += 1;"
+   push_map_as_event_on_timeout => true
+   timeout_task_id_field => "user_id"
+   timeout => 3600 # 1 hour timeout, user acivity will be considered finished one hour after the first event, even if events keep comming
+   inactivity_timeout => 300 # 5 minutes timeout, user activity will be considered finished if no new events arrive 5 minutes after the last event
+   timeout_tags => ['_aggregatetimeout']
+   timeout_code => "event.set('several_clicks', event.get('clicks') > 1)"
+ }
+}
+----------------------------------
+* After five minutes of inactivity or one hour since first event, this will yield an event like:
+[source,json]
+----------------------------------
+{
+ "user_id": "12345",
+ "clicks": 3,
+ "several_clicks": true,
+   "tags": [
+      "_aggregatetimeout"
+   ]
+}
+----------------------------------
 
 ==== How it works
 * the filter needs a "task_id" to correlate events (log lines) of a same task
@@ -230,7 +276,7 @@ In that case, you don't want to wait task timeout to flush aggregation map.
 * an aggregate map is tied to one task_id value which is tied to one task_id pattern. So if you have 2 filters with different task_id patterns, even if you have same task_id value, they won't share the same aggregate map.
 * in one filter configuration, it is recommanded to define a timeout option to protect the feature against unterminated tasks. It tells the filter to delete expired maps
 * if no timeout is defined, by default, all maps older than 1800 seconds are automatically deleted
-* all timeout options have to be defined in only one aggregate filter per task_id pattern. Timeout options are : timeout, timeout_code, push_map_as_event_on_timeout, push_previous_map_as_event, timeout_task_id_field, timeout_tags 
+* all timeout options have to be defined in only one aggregate filter per task_id pattern. Timeout options are : timeout, inactivity_timeout, timeout_code, push_map_as_event_on_timeout, push_previous_map_as_event, timeout_task_id_field, timeout_tags
 * if `code` execution raises an exception, the error is logged and event is tagged '_aggregateexception'
 
 
@@ -271,7 +317,7 @@ filter plugins.
 &nbsp;
 
 [id="plugins-{type}s-{plugin}-aggregate_maps_path"]
-===== `aggregate_maps_path` 
+===== `aggregate_maps_path`
 
   * Value type is <<string,string>>
   * There is no default value for this setting.
@@ -279,7 +325,7 @@ filter plugins.
 The path to file where aggregate maps are stored when Logstash stops
 and are loaded from when Logstash starts.
 
-If not defined, aggregate maps will not be stored at Logstash stop and will be lost. 
+If not defined, aggregate maps will not be stored at Logstash stop and will be lost.
 Must be defined in only one aggregate filter (as aggregate maps are global).
 
 Example:
@@ -291,7 +337,7 @@ Example:
     }
 
 [id="plugins-{type}s-{plugin}-code"]
-===== `code` 
+===== `code`
 
   * This is a required setting.
   * Value type is <<string,string>>
@@ -312,15 +358,15 @@ Example:
     }
 
 [id="plugins-{type}s-{plugin}-end_of_task"]
-===== `end_of_task` 
+===== `end_of_task`
 
   * Value type is <<boolean,boolean>>
   * Default value is `false`
 
-Tell the filter that task is ended, and therefore, to delete aggregate map after code execution.  
+Tell the filter that task is ended, and therefore, to delete aggregate map after code execution.
 
 [id="plugins-{type}s-{plugin}-map_action"]
-===== `map_action` 
+===== `map_action`
 
   * Value type is <<string,string>>
   * Default value is `"create_or_update"`
@@ -334,27 +380,27 @@ Tell the filter what to do with aggregate map.
 `"create_or_update"`: create the map if it wasn't created before, execute the code in all cases
 
 [id="plugins-{type}s-{plugin}-push_map_as_event_on_timeout"]
-===== `push_map_as_event_on_timeout` 
+===== `push_map_as_event_on_timeout`
 
   * Value type is <<boolean,boolean>>
   * Default value is `false`
 
-When this option is enabled, each time a task timeout is detected, it pushes task aggregation map as a new Logstash event.  
+When this option is enabled, each time a task timeout is detected, it pushes task aggregation map as a new Logstash event.
 This enables to detect and process task timeouts in Logstash, but also to manage tasks that have no explicit end event.
 
 [id="plugins-{type}s-{plugin}-push_previous_map_as_event"]
-===== `push_previous_map_as_event` 
+===== `push_previous_map_as_event`
 
   * Value type is <<boolean,boolean>>
   * Default value is `false`
 
-When this option is enabled, each time aggregate plugin detects a new task id, it pushes previous aggregate map as a new Logstash event, 
+When this option is enabled, each time aggregate plugin detects a new task id, it pushes previous aggregate map as a new Logstash event,
 and then creates a new empty map for the next task.
 
 WARNING: this option works fine only if tasks come one after the other. It means : all task1 events, then all task2 events, etc...
 
 [id="plugins-{type}s-{plugin}-task_id"]
-===== `task_id` 
+===== `task_id`
 
   * This is a required setting.
   * Value type is <<string,string>>
@@ -376,7 +422,7 @@ Example:
     }
 
 [id="plugins-{type}s-{plugin}-timeout"]
-===== `timeout` 
+===== `timeout`
 
   * Value type is <<number,number>>
   * There is no default value for this setting.
@@ -390,15 +436,15 @@ Timeout can be defined for each "task_id" pattern.
 If no timeout is defined, default timeout will be applied : 1800 seconds.
 
 [id="plugins-{type}s-{plugin}-timeout_code"]
-===== `timeout_code` 
+===== `timeout_code`
 
   * Value type is <<string,string>>
   * There is no default value for this setting.
 
-The code to execute to complete timeout generated event, when `'push_map_as_event_on_timeout'` or `'push_previous_map_as_event'` is set to true. 
-The code block will have access to the newly generated timeout event that is pre-populated with the aggregation map. 
+The code to execute to complete timeout generated event, when `'push_map_as_event_on_timeout'` or `'push_previous_map_as_event'` is set to true.
+The code block will have access to the newly generated timeout event that is pre-populated with the aggregation map.
 
-If `'timeout_task_id_field'` is set, the event is also populated with the task_id value 
+If `'timeout_task_id_field'` is set, the event is also populated with the task_id value
 
 Example:
 [source,ruby]
@@ -409,7 +455,7 @@ Example:
     }
 
 [id="plugins-{type}s-{plugin}-timeout_tags"]
-===== `timeout_tags` 
+===== `timeout_tags`
 
   * Value type is <<array,array>>
   * Default value is `[]`
@@ -425,12 +471,12 @@ Example:
     }
 
 [id="plugins-{type}s-{plugin}-timeout_task_id_field"]
-===== `timeout_task_id_field` 
+===== `timeout_task_id_field`
 
   * Value type is <<string,string>>
   * There is no default value for this setting.
 
-This option indicates the timeout generated event's field for the "task_id" value. 
+This option indicates the timeout generated event's field for the "task_id" value.
 The task id will then be set into the timeout event. This can help correlate which tasks have been timed out.
 
 For example, with option `timeout_task_id_field => "my_id"` ,when timeout task id is `"12345"`, the generated timeout event will contain `'my_id' => '12345'`.
