--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -14,7 +14,7 @@ END - GENERATED VARIABLES, DO NOT EDIT!
 
 [id="plugins-{type}-{plugin}"]
 
-=== Aggregate
+=== Aggregate filter plugin
 
 include::{include_path}/plugin_header.asciidoc[]
 
