add support for multiple pipelines

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -315,7 +315,7 @@ filter {
 * an aggregate map is tied to one task_id value which is tied to one task_id pattern. So if you have 2 filters with different task_id patterns, even if you have same task_id value, they won't share the same aggregate map.
 * in one filter configuration, it is recommanded to define a timeout option to protect the feature against unterminated tasks. It tells the filter to delete expired maps
 * if no timeout is defined, by default, all maps older than 1800 seconds are automatically deleted
-* all timeout options have to be defined in only one aggregate filter per task_id pattern. Timeout options are : timeout, inactivity_timeout, timeout_code, push_map_as_event_on_timeout, push_previous_map_as_event, timeout_task_id_field, timeout_tags
+* all timeout options have to be defined in only one aggregate filter per task_id pattern (per pipeline). Timeout options are : timeout, inactivity_timeout, timeout_code, push_map_as_event_on_timeout, push_previous_map_as_event, timeout_task_id_field, timeout_tags
 * if `code` execution raises an exception, the error is logged and event is tagged '_aggregateexception'
 
 
@@ -366,7 +366,7 @@ The path to file where aggregate maps are stored when Logstash stops
 and are loaded from when Logstash starts.
 
 If not defined, aggregate maps will not be stored at Logstash stop and will be lost.
-Must be defined in only one aggregate filter (as aggregate maps are global).
+Must be defined in only one aggregate filter per pipeline (as aggregate maps are shared at pipeline level).
 
 Example:
 [source,ruby]
