--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -243,6 +243,17 @@ In that case, you don't want to wait task timeout to flush aggregation map.
 * When 3s timeout comes, the last aggregate map is pushed as a new event
 * Finally, initial events (which are not aggregated) are dropped because useless (thanks to `event.cancel()`)
 
+In this simple example each event from JDBC has an identical structure. If they were different, for example the first had a `language` field but the second did not, the data from prior events would need to be copied onto the `map`. 
+
+For example:
+
+[source,json]
+----------------------------------
+  { "country_name": "France", "town_name": "Paris", "language": "French" }
+  { "country_name": "France", "town_name": "Marseille" }
+----------------------------------
+
+would be copied with `map['language'] ||= event.get('language')` in the aggregate code block.
 
 [id="plugins-{type}s-{plugin}-example5"]
 ==== Example #5 : no end event and push events as soon as possible
