--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -228,7 +228,7 @@ In that case, you don't want to wait task timeout to flush aggregation map.
      aggregate {
        task_id => "%{country_name}"
        code => "
-         map['country_name'] = event.get('country_name')
+         map['country_name'] ||= event.get('country_name')
          map['towns'] ||= []
          map['towns'] << {'town_name' => event.get('town_name')}
          event.cancel()
@@ -241,7 +241,8 @@ In that case, you don't want to wait task timeout to flush aggregation map.
 
 * The key point is that each time aggregate plugin detects a new `country_name`, it pushes previous aggregate map as a new Logstash event, and then creates a new empty map for the next country
 * When 3s timeout comes, the last aggregate map is pushed as a new event
-* Finally, initial events (which are not aggregated) are dropped because useless (thanks to `event.cancel()`)
+* Initial events (which are not aggregated) are dropped because useless (thanks to `event.cancel()`)
+* Last point: if a field is not fulfilled for every event (say "town_postcode" field), the `||=` operator will let you to push into aggregate map, the first "not null" value. Example: `map['town_postcode'] ||= event.get('town_postcode')`
 
 
 [id="plugins-{type}s-{plugin}-example5"]
