Fix typos in the docs

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -411,6 +411,11 @@ Available variables are:
 `map_meta`: meta informations associated to aggregate map. It allows to set a custom `timeout` or `inactivity_timeout`. 
 It allows also to get `creation_timestamp`, `lastevent_timestamp` and `task_id`.
 
+`new_event_block`: ruby block used to create new Logstash events. See the following example on how to use it.
+
+When option push_map_as_event_on_timeout=true, if you set `map_meta.timeout=0` in `code` block, then aggregated map is immediately pushed as a new event.
+
+
 Example:
 [source,ruby]
     filter {
@@ -420,7 +425,7 @@ Example:
     }
 
 
-To create additional events during the code block, to be emitted immediatly, a specific syntax must be used, like in the following example:
+To create additional events during the code block, to be emitted immediately, a specific syntax must be used, like in the following example:
 
 [source,ruby]
     filter {
@@ -435,11 +440,9 @@ To create additional events during the code block, to be emitted immediatly, a s
     }
 
 The parameter to the function `new_event_block.call` must be of type `LogStash::Event`.
-To creare such object the costructor of the same class can be used, like `LogStash::Event.new()`.
+To create such object the constructor of the same class can be used, like `LogStash::Event.new()`.
 
-`LogStash::Event.new()` can receive a parameter of type ruby `Hash` to inizialize the new event fields.
-
-When option push_map_as_event_on_timeout=true, if you set `map_meta.timeout=0` in `code` block, then aggregated map is immediately pushed as a new event.
+`LogStash::Event.new()` can receive a parameter of type ruby http://ruby-doc.org/core-1.9.1/Hash.html[Hash] to initialize the new event fields.
 
 
 [id="plugins-{type}s-{plugin}-end_of_task"]
