--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -402,7 +402,7 @@ The code to execute to update aggregated map, using current event.
 
 Or on the contrary, the code to execute to update event, using aggregated map.
 
-Available variables are :
+Available variables are:
 
 `event`: current Logstash event
 
@@ -411,7 +411,10 @@ Available variables are :
 `map_meta`: meta informations associated to aggregate map. It allows to set a custom `timeout` or `inactivity_timeout`. 
 It allows also to get `creation_timestamp`, `lastevent_timestamp` and `task_id`.
 
+`new_event_block`: block used to emit new Logstash events. See the second example on how to use it.
+
 When option push_map_as_event_on_timeout=true, if you set `map_meta.timeout=0` in `code` block, then aggregated map is immediately pushed as a new event.
+
 
 Example:
 [source,ruby]
@@ -420,6 +423,26 @@ Example:
         code => "map['sql_duration'] += event.get('duration')"
       }
     }
+
+
+To create additional events during the code execution, to be emitted immediately, you can use `new_event_block.call(event)` function, like in the following example:
+
+[source,ruby]
+    filter {
+      aggregate {
+        code => "
+            data = {:my_sql_duration => map['sql_duration']}
+            generated_event = LogStash::Event.new(data)
+            generated_event.set('my_other_field', 34)
+            new_event_block.call(generated_event)
+        "
+      }
+    }
+
+The parameter of the function `new_event_block.call` must be of type `LogStash::Event`.  
+To create such an object, the constructor of the same class can be used: `LogStash::Event.new()`.  
+`LogStash::Event.new()` can receive a parameter of type ruby http://ruby-doc.org/core-1.9.1/Hash.html[Hash] to initialize the new event fields.
+
 
 [id="plugins-{type}s-{plugin}-end_of_task"]
 ===== `end_of_task`
